feat: add logic for coureir cars
